--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wendelspires/NodeJS#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
