--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "consign": "^0.1.6",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
